--- a/wp-content/themes/miagency/assets/css/style3a05.css
+++ b/wp-content/themes/miagency/assets/css/style3a05.css
@@ -580,7 +580,6 @@ transform: translateY(0px) rotate(-180deg);
 	padding-top: 8.5%;
 }
 .project {
-    min-height: 1000px;
     width: 100%;
 	height: 100%;
 	background-size: cover;
